include $(top_srcdir)/Make-rules

GNU_EXPR_JSOURCES = \
  expr/AccessExp.java \
  expr/ApplicationMainSupport.java \
  expr/ApplyExp.java \
  expr/BeginExp.java \
  expr/BindingInitializer.java \
  expr/BlockExp.java \
  expr/BuiltinEnvironment.java \
  expr/CanFinishMap.java \
  expr/CatchClause.java \
  expr/ChainLambdas.java \
  expr/CheckedTarget.java \
  expr/ClassExp.java \
  expr/ClassInitializer.java \
  expr/Compilation.java \
  expr/CompiledModule.java \
  expr/ConditionalTarget.java \
  expr/ConsumerTarget.java \
  expr/Declaration.java \
  expr/ErrorExp.java \
  expr/ExitExp.java \
  expr/Expression.java \
  expr/ExpExpVisitor.java \
  expr/ExpVisitor.java \
  expr/FindCapturedVars.java \
  expr/FindTailCalls.java \
  expr/FluidLetExp.java \
  expr/GenericProc.java \
  expr/IfExp.java \
  expr/CaseExp.java \
  expr/IgnoreTarget.java \
  expr/Initializer.java \
  expr/Inlineable.java \
  expr/InlineCalls.java \
  expr/KawaConvert.java \
  expr/Keyword.java \
  expr/LambdaExp.java \
  expr/LangExp.java \
  expr/Language.java \
  expr/LetExp.java \
  expr/Literal.java \
  expr/LitTable.java \
  expr/ModuleBody.java \
  expr/ModuleContext.java \
  expr/ModuleInfo.java \
  expr/ModuleManager.java \
  expr/ModuleMethod.java \
  expr/ModuleMethodWithContext.java \
  expr/ModuleSet.java \
  expr/ModuleExp.java \
  expr/NameLookup.java \
  expr/PairClassType.java \
  expr/ResolveNames.java \
  expr/ObjectExp.java \
  expr/QuoteExp.java \
  expr/PrimProcedure.java \
  expr/ProcInitializer.java \
  expr/PushApply.java \
  expr/ReferenceExp.java \
  expr/RunnableModule.java \
  expr/ScopeExp.java \
  expr/SetExp.java \
  expr/SourceName.java \
  expr/Special.java \
  expr/StackTarget.java \
  expr/Symbols.java \
  expr/SynchronizedExp.java \
  expr/Target.java \
  expr/ThisExp.java \
  expr/TryExp.java \
  expr/TypeValue.java \
  expr/VarValueTracker.java

JAVAX_SCRIPT_EXTRA = \
  expr/AbstractScriptEngineFactory.java \
  expr/KawaScriptBindings.java \
  expr/KawaScriptEngine.java

GNU_LISTS_JSOURCES = \
  lists/AbstractFormat.java \
  lists/AbstractSequence.java \
  lists/Array.java \
  lists/AttributePredicate.java \
  lists/BitVector.java \
  lists/Blob.java \
  lists/ByteVector.java \
  lists/CharBuffer.java \
  lists/CharSeq.java \
  lists/ConstVector.java \
  lists/Consumer.java \
  lists/ConsumerWriter.java \
  lists/Consumable.java \
  lists/Convert.java \
  lists/ElementPredicate.java \
  lists/EmptyList.java \
  lists/EofClass.java \
  lists/ExtPosition.java \
  lists/ExtSequence.java \
  lists/F32Vector.java \
  lists/F64Vector.java \
  lists/FilterConsumer.java \
  lists/FString.java \
  lists/FVector.java \
  lists/GapVector.java \
  lists/GeneralArray.java \
  lists/GeneralArray1.java \
  lists/ItemPredicate.java \
  lists/ImmutablePair.java \
  lists/LList.java \
  lists/LListPosition.java \
  lists/NodePredicate.java \
  lists/Pair.java \
  lists/PairWithPosition.java \
  lists/PositionConsumer.java \
  lists/PositionManager.java \
  lists/PrintConsumer.java \
  lists/RAPair.java \
  lists/S8Vector.java \
  lists/S16Vector.java \
  lists/S32Vector.java \
  lists/S64Vector.java \
  lists/SeqPosition.java \
  lists/Sequence.java \
  lists/SimpleVector.java \
  lists/SubCharSeq.java \
  lists/SubSequence.java \
  lists/StableVector.java \
  lists/Strings.java \
  lists/TreeList.java \
  lists/TreePosition.java \
  lists/U8Vector.java \
  lists/U16Vector.java \
  lists/U32Vector.java \
  lists/U64Vector.java \
  lists/UnescapedData.java \
  lists/VoidConsumer.java \
  lists/XConsumer.java

GNU_MAPPING_JSOURCES = \
  mapping/CallContext.java \
  mapping/ConstrainedLocation.java \
  mapping/DynamicLocation.java \
  mapping/Environment.java \
  mapping/EnvironmentKey.java \
  mapping/Future.java \
  mapping/HasNamedParts.java \
  mapping/HasSetter.java \
  mapping/IndirectableLocation.java \
  mapping/InheritingEnvironment.java \
  mapping/KeyPair.java \
  mapping/Lazy.java \
  mapping/LazyPropertyKey.java \
  mapping/Location.java \
  mapping/LocationEnumeration.java \
  mapping/LocationProc.java \
  mapping/MethodProc.java \
  mapping/Named.java \
  mapping/NamedLocation.java \
  mapping/Namespace.java \
  mapping/PlainLocation.java \
  mapping/Procedure.java \
  mapping/Procedure0.java \
  mapping/Procedure0or1.java \
  mapping/Procedure1.java \
  mapping/Procedure1or2.java \
  mapping/Procedure2.java \
  mapping/Procedure3.java \
  mapping/Procedure4.java \
  mapping/ProcedureN.java \
  mapping/ProcLocation.java \
  mapping/Promise.java \
  mapping/PropertyKey.java \
  mapping/PropertyLocation.java \
  mapping/PropertySet.java \
  mapping/ReadOnlyLocation.java \
  mapping/RunnableClosure.java \
  mapping/Setter.java \
  mapping/Setter0.java \
  mapping/Setter1.java \
  mapping/SharedLocation.java \
  mapping/SimpleEnvironment.java \
  mapping/SimpleSymbol.java \
  mapping/Symbol.java \
  mapping/Table2D.java \
  mapping/ThreadLocation.java \
  mapping/UnboundLocationException.java \
  mapping/Values.java \
  mapping/ValueStack.java \
  mapping/WrappedException.java \
  mapping/WrongArguments.java \
  mapping/WrongType.java

GNU_TEXT_JSOURCES = \
  text/CaseConvertFormat.java \
  text/Char.java \
  text/CompoundFormat.java \
  text/DelimitSubstitutionFormat.java \
  text/EnglishIntegerFormat.java \
  text/FlushFormat.java \
  text/IntegerFormat.java \
  text/Lexer.java \
  text/LiteralFormat.java \
  text/NamedCharTable.java \
  text/Options.java \
  text/PadFormat.java \
  text/Printable.java \
  text/ReportFormat.java \
  text/ResourceStreamHandler.java \
  text/RomanIntegerFormat.java \
  text/SourceLocator.java \
  text/SourceError.java \
  text/SourceMessages.java \
  text/StandardNamedChars.java \
  text/SyntaxException.java

GNU_KAWA_IO_JSOURCES = \
  kawa/io/BinaryInPort.java \
  kawa/io/BinaryOutPort.java \
  kawa/io/CharArrayInPort.java \
  kawa/io/CharArrayOutPort.java \
  kawa/io/FilePath.java \
  kawa/io/InPort.java \
  kawa/io/LogWriter.java \
  kawa/io/NullReader.java \
  kawa/io/Path.java \
  kawa/io/OutPort.java \
  kawa/io/NBufferedInputStream.java \
  kawa/io/PrettyWriter.java \
  kawa/io/QueueReader.java \
  kawa/io/TtyInPort.java \
  kawa/io/URIPath.java \
  kawa/io/URLPath.java \
  kawa/io/WriterManager.java

GNU_KAWA_ECHO2_JSOURCES = \
  Echo2AppInstance.java \
  Echo2Display.java \
  Echo2Servlet.java \
  Echo2Window.java

GNU_KAWA_UTIL_JSOURCES = \
  kawa/util/AbstractHashTable.java \
  kawa/util/AbstractWeakHashTable.java \
  kawa/util/ExitCalled.java \
  kawa/util/FixupHtmlToc.java \
  kawa/util/GeneralHashTable.java \
  kawa/util/IdentityHashTable.java \
  kawa/util/IntHashTable.java \
  kawa/util/HashNode.java \
  kawa/util/RangeTable.java \
  kawa/util/RunTestScript.java \
  kawa/util/WeakHashNode.java \
  kawa/util/WeakIdentityHashMap.java

GNU_KAWA_REFLECT_JSOURCES = \
  kawa/reflect/ArrayGet.java \
  kawa/reflect/ArrayLength.java \
  kawa/reflect/ArrayMake.java \
  kawa/reflect/ArrayNew.java \
  kawa/reflect/ArraySet.java \
  kawa/reflect/ClassMemberLocation.java \
  kawa/reflect/ClassMethods.java \
  kawa/reflect/CompileArrays.java \
  kawa/reflect/CompileBuildObject.java \
  kawa/reflect/CompileInvoke.java \
  kawa/reflect/CompileReflect.java \
  kawa/reflect/FieldLocation.java \
  kawa/reflect/InstanceOf.java \
  kawa/reflect/Invoke.java \
  kawa/reflect/LazyType.java \
  kawa/reflect/MakeAnnotation.java \
  kawa/reflect/OccurrenceType.java \
  kawa/reflect/ProceduralProxy.java \
  kawa/reflect/SingletonType.java \
  kawa/reflect/SlotGet.java \
  kawa/reflect/SlotSet.java \
  kawa/reflect/StaticFieldLocation.java \
  kawa/reflect/StaticGet.java \
  kawa/reflect/StaticSet.java \
  kawa/reflect/Throw.java \
  kawa/reflect/TypeSwitch.java

GNU_KAWA_FUNCTIONS_JSOURCES = \
  kawa/functions/AddOp.java \
  kawa/functions/AppendValues.java \
  kawa/functions/Apply.java \
  kawa/functions/ApplyToArgs.java \
  kawa/functions/Arithmetic.java \
  kawa/functions/ArithOp.java \
  kawa/functions/Arrays.java \
  kawa/functions/ArrayRef.java \
  kawa/functions/ArraySet.java \
  kawa/functions/BitwiseOp.java \
  kawa/functions/CallCC.java \
  kawa/functions/CompilationHelpers.java \
  kawa/functions/CompileArith.java \
  kawa/functions/CompileNamedPart.java \
  kawa/functions/CompileMisc.java \
  kawa/functions/CompileProcess.java \
  kawa/functions/ConstantFunction0.java \
  kawa/functions/Convert.java \
  kawa/functions/CurryExp.java \
  kawa/functions/Curry1.java \
  kawa/functions/DisplayFormat.java \
  kawa/functions/DivideOp.java \
  kawa/functions/GetModuleClass.java \
  kawa/functions/GetNamedInstancePart.java \
  kawa/functions/GetNamedPart.java \
  kawa/functions/IntegerFormat.java \
  kawa/functions/IsEq.java \
  kawa/functions/IsEqual.java \
  kawa/functions/IsEqv.java \
  kawa/functions/LProcess.java \
  kawa/functions/MakeList.java \
  kawa/functions/MakeProcedure.java \
  kawa/functions/MakePromise.java \
  kawa/functions/MakeSplice.java \
  kawa/functions/Map.java \
  kawa/functions/MultiplyOp.java \
  kawa/functions/NamedPart.java \
  kawa/functions/Not.java \
  kawa/functions/NumberCompare.java \
  kawa/functions/NumberPredicate.java \
  kawa/functions/RunProcess.java \
  kawa/functions/SetNamedPart.java \
  kawa/functions/Setter.java \
  kawa/functions/UnicodeUtils.java \
  kawa/functions/ValuesMap.java \
  kawa/functions/Format.java \
  kawa/functions/LispFormat.java \
  kawa/functions/LispRealFormat.java \
  kawa/functions/ObjectFormat.java \
  kawa/functions/ParseFormat.java

if ENABLE_XML
GNU_KAWA_LISPEXPR_XML_JSOURCES = \
  kawa/lispexpr/MakeXmlElement.java \
  kawa/lispexpr/ReaderXmlElement.java \
  kawa/lispexpr/ResolveNamespace.java
endif

GNU_KAWA_LISPEXPR_JSOURCES = \
  kawa/lispexpr/BracketApply.java \
  kawa/lispexpr/ClassNamespace.java \
  kawa/lispexpr/DefineNamespace.java \
  kawa/lispexpr/LangObjType.java \
  kawa/lispexpr/LangPrimType.java \
  kawa/lispexpr/LispLanguage.java \
  kawa/lispexpr/LispPackage.java \
  kawa/lispexpr/LispReader.java \
  kawa/lispexpr/ReaderColon.java \
  kawa/lispexpr/ReaderConstituent.java \
  kawa/lispexpr/ReaderDispatch.java \
  kawa/lispexpr/ReaderDispatchMacro.java \
  kawa/lispexpr/ReaderDispatchMisc.java \
  kawa/lispexpr/ReaderDispatchSyntaxQuote.java \
  kawa/lispexpr/ReaderExtendedLiteral.java \
  kawa/lispexpr/ReaderIgnoreRestOfLine.java \
  kawa/lispexpr/ReaderMacro.java \
  kawa/lispexpr/ReaderMisc.java \
  kawa/lispexpr/ReaderParens.java \
  kawa/lispexpr/ReaderQuote.java \
  kawa/lispexpr/ReaderString.java \
  kawa/lispexpr/ReaderTypespec.java \
  kawa/lispexpr/ReaderVector.java \
  kawa/lispexpr/ReadTable.java \
  kawa/lispexpr/ReadTableEntry.java \
  $(GNU_KAWA_LISPEXPR_XML_JSOURCES)

GNU_KAWA_MODELS_JSOURCES = \
  kawa/models/Box.java \
  kawa/models/Button.java \
  kawa/models/Column.java \
  kawa/models/Display.java \
  kawa/models/DrawImage.java \
  kawa/models/DrawShape.java \
  kawa/models/FillShape.java \
  kawa/models/Label.java \
  kawa/models/Model.java \
  kawa/models/ModelListener.java \
  kawa/models/MenuItem.java \
  kawa/models/Paintable.java \
  kawa/models/Row.java \
  kawa/models/Spacer.java \
  kawa/models/Text.java \
  kawa/models/Viewable.java \
  kawa/models/WeakListener.java \
  kawa/models/Window.java \
  kawa/models/WithComposite.java \
  kawa/models/WithPaint.java \
  kawa/models/WithTransform.java

GNU_KAWA_SWINGVIEWS_JSOURCES =\
  kawa/swingviews/SwingButton.java \
  kawa/swingviews/SwingContent.java \
  kawa/swingviews/SwingDisplay.java \
  kawa/swingviews/SwingFrame.java \
  kawa/swingviews/SwingPaintable.java

GNU_KAWA_SWTVIEWS_JSOURCES =\
  kawa/swtviews/SwtDisplay.java

GNU_ECMASCRIPT_JSOURCES =\
  ecmascript/Reserved.java \
  ecmascript/BinaryOp.java \
  ecmascript/Convert.java \
  ecmascript/Lexer.java \
  ecmascript/Parser.java \
  ecmascript/Prompter.java

GNU_XML_JSOURCES = \
  xml/NamedChildrenFilter.java \
  xml/NamespaceBinding.java \
  xml/NodeTree.java \
  xml/TextUtils.java \
  xml/XMLFilter.java \
  xml/XMLParser.java \
  xml/XMLPrinter.java \
  xml/XName.java

GNU_KAWA_XML_JSOURCES = \
  kawa/xml/AncestorAxis.java \
  kawa/xml/AncestorOrSelfAxis.java \
  kawa/xml/AttributeAxis.java \
  kawa/xml/Attributes.java \
  kawa/xml/AttributeType.java \
  kawa/xml/Base64Binary.java \
  kawa/xml/BinaryObject.java \
  kawa/xml/ChildAxis.java \
  kawa/xml/Children.java \
  kawa/xml/CoerceNodes.java \
  kawa/xml/CommentConstructor.java \
  kawa/xml/CompileXmlFunctions.java \
  kawa/xml/DescendantAxis.java \
  kawa/xml/DescendantOrSelfAxis.java \
  kawa/xml/Document.java \
  kawa/xml/DocumentConstructor.java \
  kawa/xml/ElementType.java \
  kawa/xml/Focus.java \
  kawa/xml/FollowingAxis.java \
  kawa/xml/FollowingSiblingAxis.java \
  kawa/xml/HexBinary.java \
  kawa/xml/HttpPrinter.java \
  kawa/xml/IntersectNodes.java \
  kawa/xml/IteratorItems.java \
  kawa/xml/KAttr.java \
  kawa/xml/KCDATASection.java \
  kawa/xml/KCharacterData.java \
  kawa/xml/KComment.java \
  kawa/xml/KDocument.java \
  kawa/xml/KElement.java \
  kawa/xml/KNode.java \
  kawa/xml/KProcessingInstruction.java \
  kawa/xml/KText.java \
  kawa/xml/ListItems.java \
  kawa/xml/MakeAttribute.java \
  kawa/xml/MakeCDATA.java \
  kawa/xml/MakeElement.java \
  kawa/xml/MakeProcInst.java \
  kawa/xml/MakeResponseHeader.java \
  kawa/xml/MakeText.java \
  kawa/xml/MakeUnescapedData.java \
  kawa/xml/MakeWithBaseUri.java \
  kawa/xml/NodeCompare.java \
  kawa/xml/NodeConstructor.java \
  kawa/xml/Nodes.java \
  kawa/xml/NodeSetType.java \
  kawa/xml/NodeType.java \
  kawa/xml/Notation.java \
  kawa/xml/OutputAsXML.java \
  kawa/xml/ParentAxis.java \
  kawa/xml/PrecedingAxis.java \
  kawa/xml/PrecedingSiblingAxis.java \
  kawa/xml/ProcessingInstructionType.java \
  kawa/xml/SelfAxis.java \
  kawa/xml/SortNodes.java \
  kawa/xml/SortedNodes.java \
  kawa/xml/TreeScanner.java \
  kawa/xml/UnionNodes.java \
  kawa/xml/UntypedAtomic.java \
  kawa/xml/WriteTo.java \
  kawa/xml/XDataType.java \
  kawa/xml/XInteger.java \
  kawa/xml/XIntegerType.java \
  kawa/xml/XString.java \
  kawa/xml/XStringType.java \
  kawa/xml/XTimeType.java \
  kawa/xml/XmlNamespace.java

GNU_KAWA_SAX_JSOURCES = \
  kawa/sax/ContentConsumer.java \
  kawa/sax/KawaXMLReader.java

GNU_KAWA_XSLT_JSOURCES = \
  kawa/xslt/ApplyTemplates.java \
  kawa/xslt/TemplateTable.java \
  kawa/xslt/XSLT.java \
  kawa/xslt/XslTranslator.java

# These Java sources are not built or used when using configure+make, only
# when using Ant - but they still should go into the distribution tar file.
GNU_KAWA_ANT_JSOURCES =\
  kawa/ant/LineStripperSet.java \
  kawa/ant/LineCommenterSet.java \
  kawa/ant/XCopy.java \
  kawa/ant/Kawac.java

EXTRA_DIST = \
  kawa/util/PreProcess.java \
  expr/package.html \
  mapping/package.html \
  lists/package.html \
  text/package.html \
  kawa/reflect/package.html \
  $(GNU_KAWA_ANT_JSOURCES)
EXTRA_CLEAN = */*.class kawa/*/*.class

PACKAGE_FNAME = gnu

java_sources = \
  $(GNU_LISTS_JSOURCES) \
  $(GNU_TEXT_JSOURCES) \
  $(GNU_MAPPING_JSOURCES) \
  $(GNU_EXPR_JSOURCES) \
  $(GNU_KAWA_IO_JSOURCES) \
  $(GNU_KAWA_UTIL_JSOURCES) \
  $(GNU_KAWA_REFLECT_JSOURCES) \
  $(GNU_KAWA_FUNCTIONS_JSOURCES) \
  $(GNU_KAWA_LISPEXPR_JSOURCES) \
  $(GNU_KAWA_MODELS_JSOURCES) \
  $(GNU_ECMASCRIPT_JSOURCES)
if WITH_SWING
java_sources += $(GNU_KAWA_SWINGVIEWS_JSOURCES)
endif
if WITH_SWT
java_sources += $(GNU_KAWA_SWTVIEWS_JSOURCES)
endif
if ENABLE_XML
java_sources += $(GNU_XML_JSOURCES) $(GNU_KAWA_XML_JSOURCES)
if WITH_SAX2
java_sources += $(GNU_KAWA_SAX_JSOURCES)
endif
endif
if ENABLE_ECHO2
java_sources += $(GNU_KAWA_ECHO2_JSOURCES)
endif
if ENABLE_XQUERY
java_sources += $(GNU_KAWA_XSLT_JSOURCES)
endif
if WITH_JAVAX_SCRIPT
java_sources += $(JAVAX_SCRIPT_EXTRA)
endif

STANDARD_NAMED_CHARS_URL = http://www.w3.org/2003/entities/2007/w3centities-f.ent

$(srcdir)/text/StandardNamedChars.java:
	wget -nv -O - $(STANDARD_NAMED_CHARS_URL) \
	| sed -n -e 's|&#38;|\&|' \
	      -e '/ENTITY/s/^.*ENTITY *\([^ ]*\) *"\([^"]*\)" *>\(.*\)$$/    t.put("\1"\2);\3/p' \
	| sed -e 's|<!--\(.*\)-->|  // \1|' \
	      -e 's|&#x\([0-9a-fA-F]*\);|, 0x\1|g' \
	      -e 's|&#0*\([0-9a-fA-F]*\);|, \1|g' \
	      -e '1i\' \
	      -e '// DO NOT EDIT: This file is automatically generated by gnu/text/Makefile.\' \
	      -e 'package gnu.text;\' \
	      -e 'public class StandardNamedChars {\' \
	      -e '  public static final NamedCharTable instance = new NamedCharTable();\' \
	      -e '  static { NamedCharTable t = instance;' \
	      -e '$$a\' \
	      -e '}}' \
	> $@

all:  Makefile java-classes.stamp
